syntax = "proto3";

import "ci/githubstats/buildbuddy_proto/remote_execution.proto";

package resource;

////////////////////////////////////////////////////////////////////////////////
//
// Stored file protos. Use caution, these protos may be stored to disk.
//
////////////////////////////////////////////////////////////////////////////////

message ResourceName {
  // The digest (hash + size) of this resource.
  // Ex. 17547d520cf27d13aaaacbcf47cc33e1918ef98b7f252dfda28824b26052551/188
  build.bazel.remote.execution.v2.Digest digest = 1;

  // The namespace (remote instance name) this resource is stored in.
  // Ex. "", "ios/1", "my_remote_instance"
  string instance_name = 2;

  // The compressor (if any) used to compress the resource data.
  // Ex. IDENTITY, ZSTD, DEFLATE.
  build.bazel.remote.execution.v2.Compressor.Value compressor = 3;

  // The cache isolation type of this resource. For now, that can
  // be either CAS or AC. Other cache types may exist in the future.
  // Ex. CAS, AC
  CacheType cache_type = 4;

  // The digest function used to hash this resource and create the digest.
  // If unset, the value is inferred from the digest.Hash length, but note
  // that this is only correct for the following digest types:
  // MD5, MURMUR3, SHA1, SHA256, SHA384, SHA512, VSO.
  build.bazel.remote.execution.v2.DigestFunction.Value digest_function = 5;
}

// CacheType represents the type of cache being written to.
enum CacheType {
  UNKNOWN_CACHE_TYPE = 0;
  // Action cache (AC).
  AC = 1;
  // Content addressable storage (CAS) cache.
  CAS = 2;
}
